# MDS7202

./: .gitignore  README.md  pyproject.toml
labs/lab_1/: Lab1_Enunciado.ipynb
labs/lab_10/: Lab10_enunciado.ipynb
labs/lab_10/faiss_index/: index.faiss
labs/lab_2/: Lab2_Enunciado.ipynb
labs/lab_3/: Lab3_Enunciado.ipynb
labs/lab_4/: Lab4_Enunciado.ipynb
labs/lab_5/: Lab5_enunciado.ipynb
labs/lab_6/: Lab6_Enunciado.ipynb
labs/lab_7/: Lab7_enunciado.ipynb
labs/lab_8/: .dockerignore  Dockerfile  Lab8_enunciado.ipynb  main.py  optimize.py  requirements.txt
labs/lab_8/mlruns/0/: meta.yaml
labs/lab_8/mlruns/322687955904155858/: meta.yaml
labs/lab_8/mlruns/322687955904155858/0da3256ab6b748779efc9489ef1b09a2/: meta.yaml
labs/lab_8/mlruns/322687955904155858/2d1deb352a9b4d48bac840470cee29bb/: meta.yaml
labs/lab_8/mlruns/322687955904155858/377f88f7b7af4cd8abc06970e349c436/: meta.yaml
labs/lab_8/mlruns/322687955904155858/618b52ce8148471aaf14c34dbb39750f/: meta.yaml
labs/lab_8/mlruns/322687955904155858/69799b1c165942b9a93b652f1a89590f/: meta.yaml
labs/lab_8/mlruns/322687955904155858/917d7e2119e94e4eafb50710217287fd/: meta.yaml
labs/lab_8/mlruns/322687955904155858/9873c0983d654308a76b0fe0e8fffadf/: meta.yaml
labs/lab_8/mlruns/322687955904155858/c23d88621055418aa2268b9d734ab470/: meta.yaml
labs/lab_8/mlruns/322687955904155858/f3e3c28a24cc4e1d8810f7a46d88bf5f/: meta.yaml
labs/lab_8/mlruns/322687955904155858/ff16441f44bf4d468c4f49646edb8e68/: meta.yaml
labs/lab_8/models/: best_model.pkl  best_params.csv  library_versions.csv
labs/lab_9/: Lab9_Enunciado.ipynb  airflow.cfg  simple_auth_manager_passwords.json.generated
labs/lab_9/dags/: spotify_pipeline_dag.py
src/mds7202/: __init__.py
(+106 files in other folders)
