[project]
name = "mds7202"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fa11ingDeep", email = "jiale.chen@ug.uchile.cl" }
]
requires-python = ">=3.12,<3.13"

dependencies = [
    "cryptography>=48.0.0",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.136.3",
    "ipykernel>=6.29",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.2",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "lightgbm>=4.6.0",
    "matplotlib>=3.9",
    "missingno>=0.5.2",
    "mlflow==2.22.1",
    "nltk>=3.9",
    "numpy>=2.0,<3",
    "openpyxl>=3.1.5",
    "optuna>=4.0",
    "pandas>=2.2,<3",
    "pillow>=10",
    "pip>=26.1.2",
    "plotly>=5.24",
    "pre-commit>=4",
    "protobuf<5",
    "pypdf>=6.13.3",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.8",
    "scikit-learn>=1.5,<1.8",
    "setuptools<82.0.0",
    "shap>=0.46",
    "umap-learn>=0.5.6",
    "uvicorn>=0.49.0",
    "xgboost>=2.1",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors: errores de estilo (indentación, espacios, etc.)
    "W",   # pycodestyle warnings: advertencias de estilo menores
    "F",   # pyflakes: imports no usados, variables indefinidas, nombres duplicados
    "I",   # isort: orden y agrupación correcta de imports
    "B",   # flake8-bugbear: patrones propensos a bugs y malas prácticas
    "UP",  # pyupgrade: modernización automática de sintaxis a Python 3.12+
]
ignore = [
    "E501", # line-too-long: largo de línea (delegado a ruff-format)
]
